Criação de vários bots em um só código

--- a/.env
+++ b/.env
@@ -1,3 +1,22 @@
-# .env
+# Token do bot principal
 TELEGRAM_TOKEN=8092420371:AAEfG0QVnSk1S3dqot_hcLin_cSUudVeaoM
 TELEGRAM_CHAT_ID=-1002554313430
+
+# Token e chat ID para colunas e dúzias
+TELEGRAM_TOKEN_COLUNAS_DUZIAS=7591461542:AAFwUR9-IJAulrxPjH7ug68YGJZh6qEGgK4
+TELEGRAM_CHAT_ID_COLUNAS_DUZIAS=-1002595230333
+
+# Token e chat ID para 3 cores
+TELEGRAM_TOKEN_TRES_CORES=7884049093:AAE9iWcO_ACPMl3ILkAZgTSkQnq6LycAW0k
+TELEGRAM_CHAT_ID_TRES_CORES=-1002628672968
+
+# Token e chat ID para 5 cores
+TELEGRAM_TOKEN_CINCO_CORES=7769925073:AAGU-iUb-jB9OVyagEg-yoFgNQuw5I4uROg
+TELEGRAM_CHAT_ID_CINCO_CORES=-1002541638094
+
+# Token e chat ID para 3 cores alternadas
+TELEGRAM_TOKEN_TRES_CORES_ALT=7826567783:AAF5Isjz1rOTDvDTA4k-YLx01hMS88-R5Zg
+TELEGRAM_CHAT_ID_TRES_CORES_ALT=-1002676666122
+
+# Demais configurações do seu ambiente
+PORT=3000
